Improve immutability of values returned from MultiValueTable and document their behavior
Wrapped returned values from entrySet() and keySet() with unmodifiable views.
Described more verbosely the properties of returned values.